# dav1d

./: CMakeLists.txt  batch_generate2.sh  generate_project.bat  generate_project.sh
src/: CMakeLists.txt
tools/: CMakeLists.txt
